@@ -29,6 +29,8 @@ import io.airbyte.config.StandardCheckConnectionOutput;
 import io.airbyte.config.StandardCheckConnectionOutput.Status;
 import io.airbyte.config.WorkerDestinationConfig;
 import io.airbyte.integrations.destination.NamingConventionTransformer;
+import io.airbyte.integrations.standardtest.destination.comparator.BasicTestDataComparator;
+import io.airbyte.integrations.standardtest.destination.comparator.TestDataComparator;
 import io.airbyte.protocol.models.AirbyteCatalog;
 import io.airbyte.protocol.models.AirbyteMessage;
 import io.airbyte.protocol.models.AirbyteMessage.Type;
@@ -59,18 +61,12 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Instant;
-import java.time.ZoneOffset;
-import java.time.ZonedDateTime;
-import java.time.format.DateTimeFormatter;
-import java.time.format.DateTimeParseException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashSet;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
 import java.util.Optional;
 import java.util.Random;
 import java.util.UUID;
@@ -98,18 +94,16 @@ public abstract class DestinationAcceptanceTest {
   private static final String JOB_ID = "0";
   private static final int JOB_ATTEMPT = 0;
 
-  protected static final String AIRBYTE_DATE_FORMAT = "yyyy-MM-dd";
-  protected static final String AIRBYTE_DATETIME_FORMAT = "yyyy-MM-dd'T'HH:mm:ss";
-  protected static final String AIRBYTE_DATETIME_WITH_TZ_FORMAT = "yyyy-MM-dd'T'HH:mm:ssXXX";
-
   private static final Logger LOGGER = LoggerFactory.getLogger(DestinationAcceptanceTest.class);
 
   private TestDestinationEnv testEnv;
 
   private Path jobRoot;
-  protected Path localRoot;
   private ProcessFactory processFactory;
   private WorkerConfigs workerConfigs;
+
+  protected Path localRoot;
+  protected TestDataComparator testDataComparator = getTestDataComparator();
 
   /**
    * Name of the docker image that the tests will run against.
@@ -1122,9 +1116,8 @@ public abstract class DestinationAcceptanceTest {
       final String streamName = stream.getName();
       final String schema = stream.getNamespace() != null ? stream.getNamespace() : defaultSchema;
       final List<AirbyteRecordMessage> msgList = retrieveRecords(testEnv, streamName, schema, stream.getJsonSchema())
-          .stream()
-          .map(data -> new AirbyteRecordMessage().withStream(streamName).withNamespace(schema).withData(data))
-          .collect(Collectors.toList());
+              .stream()
+              .map(data -> new AirbyteRecordMessage().withStream(streamName).withNamespace(schema).withData(data)).toList();
       actualMessages.addAll(msgList);
     }
 
@@ -1148,169 +1141,7 @@ public abstract class DestinationAcceptanceTest {
         .map(AirbyteRecordMessage::getData)
         .collect(Collectors.toList());
 
-    assertSameData(expectedProcessed, actualProcessed);
-  }
-
-  private boolean areBothEmpty(final JsonNode expectedData, final JsonNode actualData) {
-    if (expectedData.size() == 0 && actualData.size() == 0) {
-      return true;
-    } else if (expectedData.size() <= 1 && actualData.size() <= 1) {
-      boolean isExpectedEmpty = (expectedData.size() == 0 || expectedData.iterator().next().asText().isEmpty());
-      return isExpectedEmpty && (actualData.size() == 0 || actualData.iterator().next().asText().isEmpty());
-    } else {
-      return false;
-    }
-  }
-
-  private void assertSameData(final List<JsonNode> expected, final List<JsonNode> actual) {
-    LOGGER.info("Expected data {}", expected);
-    LOGGER.info("Actual data   {}", actual);
-    assertEquals(expected.size(), actual.size());
-    final Iterator<JsonNode> expectedIterator = expected.iterator();
-    final Iterator<JsonNode> actualIterator = actual.iterator();
-    while (expectedIterator.hasNext() && actualIterator.hasNext()) {
-      compareObjects(expectedIterator.next(), actualIterator.next());
-    }
-  }
-
-  protected void compareObjects(final JsonNode expectedObject, final JsonNode actualObject) {
-    final Iterator<Entry<String, JsonNode>> expectedDataIterator = expectedObject.fields();
-    LOGGER.info("Expected Object : {}", expectedObject);
-    LOGGER.info("Actual Object   : {}", actualObject);
-    if (areBothEmpty(expectedObject, actualObject)) {
-      LOGGER.info("Both rows are empty.");
-    } else {
-      assertEquals(expectedObject.size(), actualObject.size(), "Unequal row size");
-      while (expectedDataIterator.hasNext()) {
-        final Entry<String, JsonNode> expectedEntry = expectedDataIterator.next();
-        final JsonNode expectedValue = expectedEntry.getValue();
-        JsonNode actualValue = null;
-        String key = expectedEntry.getKey();
-        for (final String tmpKey : resolveIdentifier(expectedEntry.getKey())) {
-          actualValue = actualObject.get(tmpKey);
-          if (actualValue != null) {
-            key = tmpKey;
-            break;
-          }
-        }
-        LOGGER.info("For {} Expected {} vs Actual {}", key, expectedValue, actualValue);
-        assertTrue(actualObject.has(key));
-        assertSameValue(expectedValue, actualValue);
-      }
-    }
-  }
-
-  // Allows subclasses to implement custom comparison asserts
-  protected void assertSameValue(final JsonNode expectedValue, final JsonNode actualValue) {
-    LOGGER.info("assertSameValue : {} vs {}", expectedValue, actualValue);
-
-    assertTrue(compareJsonNodes(expectedValue, actualValue), "Expected value " + expectedValue + " vs Actual value " + actualValue);
-  }
-
-  protected boolean compareJsonNodes(final JsonNode expectedValue, final JsonNode actualValue) {
-    if (expectedValue == null || actualValue == null)
-      return expectedValue == null && actualValue == null;
-    else if (expectedValue.isNumber() || expectedValue.isDouble() || expectedValue.isFloat())
-      return compareNumericValues(expectedValue.asText(), actualValue.asText());
-    else if (expectedValue.isBoolean())
-      return compareBooleanValues(expectedValue.asText(), actualValue.asText());
-    else if (isDateTimeWithTzValue(expectedValue.asText()))
-      return compareDateTimeWithTzValues(expectedValue.asText(), actualValue.asText());
-    else if (isDateTimeValue(expectedValue.asText()))
-      return compareDateTimeValues(expectedValue.asText(), actualValue.asText());
-    else if (isDateValue(expectedValue.asText()))
-      return compareDateValues(expectedValue.asText(), actualValue.asText());
-    else if (expectedValue.isArray() && actualValue.isArray())
-      return compareArrays(expectedValue, actualValue);
-    else if (expectedValue.isObject() && actualValue.isObject()) {
-      compareObjects(expectedValue, actualValue);
-      return true;
-    }
-    else
-      return compareString(expectedValue, actualValue);
-  }
-
-  protected boolean compareString(final JsonNode expectedValue, final JsonNode actualValue) {
-    return expectedValue.asText().equals(actualValue.asText());
-  }
-
-  private List<JsonNode> getArrayList(final JsonNode jsonArray) {
-    List<JsonNode> result = new ArrayList<>();
-    jsonArray.elements().forEachRemaining(result::add);
-    return result;
-  }
-
-  protected boolean compareArrays(final JsonNode expectedArray, final JsonNode actualArray) {
-    var expectedList = getArrayList(expectedArray);
-    var actualList = getArrayList(actualArray);
-
-    if (expectedList.size() != actualList.size()) {
-      return false;
-    }
-    else {
-      boolean result = false;
-      for (JsonNode expectedNode : expectedList) {
-        for (JsonNode actualNode : actualList) {
-          result = compareJsonNodes(expectedNode, actualNode) || result;
-        }
-      }
-      return result;
-    }
-  }
-
-  protected boolean compareBooleanValues(final String firstNumericValue, final String secondNumericValue) {
-    return Boolean.valueOf(firstNumericValue) == Boolean.valueOf(secondNumericValue);
-  }
-
-  protected boolean compareNumericValues(final String firstNumericValue, final String secondNumericValue) {
-    double firstValue = Double.parseDouble(firstNumericValue);
-    double secondValue = Double.parseDouble(secondNumericValue);
-
-    return firstValue == secondValue;
-  }
-
-  protected DateTimeFormatter getAirbyteDateTimeWithTzFormatter() {
-    return DateTimeFormatter.ofPattern(AIRBYTE_DATETIME_WITH_TZ_FORMAT);
-  }
-
-  protected boolean isDateTimeWithTzValue(final String value) {
-    return value.matches(".+[+-]\\d{2}:\\d{2}");
-  }
-
-  protected ZonedDateTime parseDestinationDateWithTz(final String destinationValue) {
-    return ZonedDateTime.parse(destinationValue, DateTimeFormatter.ofPattern(AIRBYTE_DATETIME_WITH_TZ_FORMAT)).withZoneSameInstant(ZoneOffset.UTC);
-  }
-
-  protected boolean compareDateTimeWithTzValues(final String airbyteMessageValue, final String destinationValue) {
-    try {
-      ZonedDateTime airbyteDate = ZonedDateTime.parse(airbyteMessageValue, getAirbyteDateTimeWithTzFormatter()).withZoneSameInstant(ZoneOffset.UTC);
-      ZonedDateTime destinationDate = parseDestinationDateWithTz(destinationValue);
-      return airbyteDate.equals(destinationDate);
-    } catch (DateTimeParseException e) {
-      LOGGER.warn("Fail to convert values to ZonedDateTime. Try to compare as text. Airbyte value({}), Destination value ({}). Exception: {}",
-          airbyteMessageValue, destinationValue, e);
-      return compareTextValues(airbyteMessageValue, destinationValue);
-    }
-  }
-
-  protected boolean isDateTimeValue(final String value) {
-    return value.matches("\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}");
-  }
-
-  protected boolean compareDateTimeValues(final String airbyteMessageValue, final String destinationValue) {
-    return compareTextValues(airbyteMessageValue, destinationValue);
-  }
-
-  protected boolean isDateValue(final String value) {
-    return value.matches("\\d{4}-\\d{2}-\\d{2}");
-  }
-
-  protected boolean compareDateValues(final String airbyteMessageValue, final String destinationValue) {
-    return compareTextValues(airbyteMessageValue, destinationValue);
-  }
-
-  protected boolean compareTextValues(final String firstValue, final String secondValue) {
-    return firstValue.equals(secondValue);
+    testDataComparator.assertSameData(expectedProcessed, actualProcessed);
   }
 
   protected List<AirbyteRecordMessage> retrieveNormalizedRecords(final AirbyteCatalog catalog, final String defaultSchema) throws Exception {
@@ -1320,8 +1151,8 @@ public abstract class DestinationAcceptanceTest {
       final String streamName = stream.getName();
 
       final List<AirbyteRecordMessage> msgList = retrieveNormalizedRecords(testEnv, streamName, defaultSchema)
-              .stream()
-              .map(data -> new AirbyteRecordMessage().withStream(streamName).withData(data)).toList();
+          .stream()
+          .map(data -> new AirbyteRecordMessage().withStream(streamName).withData(data)).toList();
       actualMessages.addAll(msgList);
     }
     return actualMessages;
@@ -1520,6 +1351,10 @@ public abstract class DestinationAcceptanceTest {
           + "Pellentesque elementum vehicula egestas. Sed volutpat velit arcu, at imperdiet sapien consectetur facilisis. Suspendisse porttitor tincidunt interdum. Morbi gravida faucibus tortor, ut rutrum magna tincidunt a. Morbi eu nisi eget dui finibus hendrerit sit amet in augue. Aenean imperdiet lacus enim, a volutpat nulla placerat at. Suspendisse nibh ipsum, venenatis vel maximus ut, fringilla nec felis. Sed risus mi, egestas quis quam ullamcorper, pharetra vestibulum diam.\n"
           + "\n"
           + "Praesent finibus scelerisque elit, accumsan condimentum risus mattis vitae. Donec tristique hendrerit facilisis. Curabitur metus purus, venenatis non elementum id, finibus eu augue. Quisque posuere rhoncus ligula, et vehicula erat pulvinar at. Pellentesque vel quam vel lectus tincidunt congue quis id sapien. Ut efficitur mauris vitae pretium iaculis. Aliquam consectetur iaculis nisi vitae laoreet. Integer vel odio quis diam mattis tempor eget nec est. Donec iaculis facilisis neque, at dictum magna vestibulum ut. Sed malesuada non nunc ac consequat. Maecenas tempus lectus a nisl congue, ac venenatis diam viverra. Nam ac justo id nulla iaculis lobortis in eu ligula. Vivamus et ligula id sapien efficitur aliquet. Curabitur est justo, tempus vitae mollis quis, tincidunt vitae felis. Vestibulum molestie laoreet justo, nec mollis purus vulputate at.";
+
+  protected TestDataComparator getTestDataComparator() {
+    return new BasicTestDataComparator();
+  }
 
   protected boolean supportBasicDataTypeTest() {
     return false;
